<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Recycle Around Town</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_title">Add Constant</string>
    <string name="delete_title">Delete Constant: Are You Sure?</string>
    <string name="title_activity_maps">Map</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."</string>
    <string name="title_activity_add_bin">Add Recycle Bin</string>
    <string name="title_activity_maps">Add Maps</string>

    <string name="size_prompt">Size of Recycle Bin</string>
    <string-array name="bin_arrays">
        <item>Office size</item>
        <item>Household size</item>
        <item>Municipal size</item>
    </string-array>

    <string name="paper">Paper</string>
    <string name="plastic">Plastic</string>
    <string name="glass">Glass</string>

    <string name="addBin">Add Recycle Bin</string>



</resources>


